feat(ask): add finalization and polling api (#27)
